[workspace]
members = [
    "rust/scx_utils",
    "rust/scx_stats",
    "scheds/rust/scx_lavd",
#    "rust/scx_stats/scx_stats_derive",
#     "rust/scx_loader",
#     "rust/scx_rustland_core",
#     "rust/scx_userspace_arena",
#     "scheds/rust/scx_bpfland",
#     "scheds/rust/scx_chaos",
#     "scheds/rust/scx_flash",
#     "scheds/rust/scx_layered",
#     "scheds/rust/scx_mitosis",
#     "scheds/rust/scx_p2dq",
#     "scheds/rust/scx_rlfifo",
#     "scheds/rust/scx_rustland",
#     "scheds/rust/scx_rusty",
#     "scheds/rust/scx_tickless",
#     "tools/scxctl",
#     "tools/scxtop",
#     "tools/vmlinux_docify",
]
resolver = "2"

[profile.release]
lto = "thin"

[profile.release-fast]
inherits = "release"
target-cpu = "native"
lto = false
incremental = true
opt-level = 0
debuginfo = 0
